# controllers/products.js
@@ -3,7 +3,10 @@ const ObjectId = require('mongodb').ObjectId;
 
 const getAllProducts = async(req, res) => {
     try {
-        const result = await mongodb.getDb().db('Project_week_5_to_8').collection('Products').find();
+        const result = await mongodb
+            .getDb()
+            .db('Project_week_5_to_8')
+            .collection('Products').find();
         result.toArray().then((lists) => {
             res.setHeader('Content-Type', 'application/json');
             res.status(200).json(lists);
@@ -13,36 +16,74 @@ const getAllProducts = async(req, res) => {
     }
 };
 
-const getAllProductsBySeller = async(req, res) => {
+// const getAllProductsBySeller = async (req, res) => {
+// try {
+// const userName = req.params.userName; 
+// if (!userName) {
+// return res.status(400).json('Must provide a valid username to find a product.');
+// }
+// const result = await mongodb
+// .getDb().db('Project_week_5_to_8')
+// .collection('Products')
+// .find({ userName: userName });
+// result.toArray().then((lists) => {
+// res.setHeader('Content-Type', 'application/json');
+// res.status(200).json(lists);
+// });
+// } catch (err) {
+// res.status(500).json(err);
+// }
+// };
+
+
+const getProductsBySearch = async(req, res) => {
     try {
-        const userId = new objectId(req.params.userId);
-        const result = await mongodb.getDb().db('Project_week_5_to_8').collection('Products').find({ userId: userId });
-        result.toArray().then((lists) => {
-            res.setHeader('Content-Type', 'application/json');
-            res.status(200).json(lists);
-        });
-    } catch (err) {
-        res.status(500).json(err);
+        const query = req.params.query;
+        if (!query) {
+            return res.status(400).json('Must provide a valid search word to find a product.');
+        }
+
+        // Construct the query object to match any field containing the query value
+        const searchQuery = {
+            $or: [
+                { userName: { $regex: query, $options: 'i' } },
+                { category: { $regex: query, $options: 'i' } },
+                { brand: { $regex: query, $options: 'i' } },
+                { productName: { $regex: query, $options: 'i' } }
+            ]
+        };
+
+        const products = await mongodb
+            .getDb()
+            .db('Project_week_5_to_8')
+            .collection('Products')
+            .find(searchQuery)
+            .toArray();
+
+        res.json(products);
+    } catch (error) {
+        console.error(error);
+        res.status(500).json('An error occurred while fetching the products.');
     }
 };
-
-
 
 const createProduct = async(req, res) => {
     try {
         const product = {
+            userName: req.body.userName,
             productName: req.body.productName,
             brand: req.body.brand,
+            category: req.body.category,
             color: req.body.color,
-            initialPrice: req.body.initialPrice,
             declutterPrice: req.body.declutterPrice,
-            condition: req.body.condition,
             description: req.body.description,
-            location: req.body.location,
-            userId: req.body.userId
-
+            location: req.body.location
         };
-        const response = await mongodb.getDb().db('Project_week_5_to_8').collection('Products').insertOne(product);
+        const response = await mongodb
+            .getDb()
+            .db('Project_week_5_to_8')
+            .collection('Products')
+            .insertOne(product);
         if (response.acknowledged) {
             res.status(201).json(response);
         } else {
@@ -56,19 +97,24 @@ const createProduct = async(req, res) => {
 const updateProduct = async(req, res) => {
     try {
         const productId = new ObjectId(req.params.id);
+        if (!productId) {
+            return res.status(400).json('Must provide a valid product ID update a product.');
+        }
         // be aware of updateOne if you only want to update specific fields
         const product = {
+            userName: req.body.userName,
             productName: req.body.productName,
             brand: req.body.brand,
             color: req.body.color,
-            initialPrice: req.body.initialPrice,
             declutterPrice: req.body.declutterPrice,
-            condition: req.body.condition,
             description: req.body.description,
             location: req.body.location
-
         };
-        const response = await mongodb.getDb().db('Project_week_5_to_8').collection('Products').replaceOne({ _id: productId }, product);
+        const response = await mongodb
+            .getDb()
+            .db('Project_week_5_to_8')
+            .collection('Products')
+            .replaceOne({ _id: productId }, product);
         console.log(response);
         if (response.modifiedCount > 0) {
             res.status(204).send();
@@ -83,7 +129,13 @@ const updateProduct = async(req, res) => {
 const deleteProduct = async(req, res) => {
     try {
         const productId = new ObjectId(req.params.id);
-        const response = await mongodb.getDb().db('Project_week_5_to_8').collection('Products').deleteOne({ _id: productId }, true);
+        if (!productId) {
+            return res.status(400).json('Must provide a valid product ID to delete a product.');
+        }
+        const response = await mongodb
+            .getDb().db('Project_week_5_to_8')
+            .collection('Products')
+            .deleteOne({ _id: productId }, true);
         console.log(response);
         if (response.deletedCount > 0) {
             res.status(204).send();
@@ -97,7 +149,7 @@ const deleteProduct = async(req, res) => {
 
 module.exports = {
     getAllProducts,
-    getAllProductsBySeller,
+    getProductsBySearch,
     createProduct,
     updateProduct,
     deleteProduct
