# routes/user.js
@@ -1,15 +1,16 @@
 const express = require('express');
 const router = express.Router();
 const userController = require('../controllers/user');
+const validation = require('../middleware/validate')
 
 router.get('/', userController.getAllUser);
 
-router.get('/:id', userController.getSingleUser);
+router.get('/:userName', userController.getSingleUser);
 
-router.post('/', userController.createUser);
+router.post('/', validation.saveContact, userController.createUser);
 
-router.put('/:id', userController.updateUser);
+router.put('/:userName', validation.saveContact, userController.updateUser);
 
-router.delete('/:id', userController.deleteUser);
+router.delete('/:userName', userController.deleteUser);
 
 module.exports = router;
